2003-02-23 00:02  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSParagraphStyle.m: Implement -isEqual: and -hash.

2003-02-23 13:30  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow (-update): Don't redisplay the window.

2003-02-22  Benhur Stein <benhur@inf.ufsm.br>

	* Source/NSView.m (-displayIfNeededInRectIgnoringOpacity:): Disable
	and re-enable flushing here.
	(-displayRectIgnoringOpacity:): And here.
	* Source/NSWindow.m ([NSWindow -display]): Instead of here.
	([NSWindow -update]): And here.

2003-02-23 01:59  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m, Source/NSLayoutManager.m: Use num_linefrags
	to tell whether layout has started for a text container or not,
	instead of tracking the status separately.

2003-02-22 12:29  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSApplication.m (-sendEvent:):	Only bring up the main
	menu if the there is no window for the event.

	* Source/NSPopUpButton.m: Implement -menuForEvent: to always
	return nil to indicate that we don't have a context menu.

2003-02-22 02:34  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h: Declare
	-layoutManager:didCompleteLayoutForTextContainer:atEnd: so it's
	visible (to gcc and to delegate implementers).

	* Source/GSHorizontalTypesetter.m, Source/NSLayoutManager.m: Make
	sure the extra line frag is always set when we reach the end (ie.
	even after soft-invalidated layout information has been used up to
	the end).

2003-02-21 Serg Stoyan <stoyan@hologr.com>

	* Source/NSApplication.m (-activateIgnoringOtherApps:): Remove
	main menu display.
	(-sendEvent:): Check first if right button down.
	(-setMainMenu:): Don't set menu title. Remove menu display.
	* Source/NSMenu.m (-init): Default title is process name.
	(-initWithTitle:): Observe NSApplicationWillBecomeActiveNotification.
	(_showOnActivateApp:): New.